tests/noproph/list_std.stderr
error: custom attribute panicked
  --> ../tests/noproph/list_std.rs:57:1
   |
57 | / #[extract_lemma(
58 | |     forall head, tail, len, p.
59 | |     assuming { head == Some(p) }
60 | |     from { list_ref_mut_htl(list, head, tail, len) }
61 | |     extract { Ownable::own(&mut (*p.as_ptr()).element) }
62 | | )]
   | |__^
   |
   = help: message: need prophecise to be set

error[E0432]: unresolved imports `gilogic::assert_bind`, `gilogic::macros::no_prophecies`
 --> ../tests/noproph/list_std.rs:5:5
  |
5 |     assert_bind,
  |     ^^^^^^^^^^^ no `assert_bind` in the root
6 |     macros::{no_prophecies::with_freeze_lemma_for_mutref, *},
  |              ^^^^^^^^^^^^^ could not find `no_prophecies` in `macros`

warning: unused import: `unfold`
 --> ../tests/noproph/list_std.rs:7:5
  |
7 |     unfold, Ownable,
  |     ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

[TIMESTAMP WARN  lib_rtg::metadata] could not read metadata for crate `"std"`: Os { code: 2, kind: NotFound, message: "No such file or directory" }
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _4
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _1
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _1
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _2
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _16
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _4
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _16
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _4
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _2
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _7
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _2
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _2
error[E0425]: cannot find function `freeze_htl` in this scope
   --> ../tests/noproph/list_std.rs:275:9
    |
275 |         freeze_htl(self);
    |         ^^^^^^^^^^------
    |         |
    |         help: try calling `freeze_htl` as a method: `self.freeze_htl()`

error[E0425]: cannot find function `extract_head` in this scope
   --> ../tests/noproph/list_std.rs:280:17
    |
280 |                 extract_head(self);
    |                 ^^^^^^^^^^^^------
    |                 |
    |                 help: try calling `extract_head` as a method: `self.extract_head()`

error: aborting due to 4 previous errors; 1 warning emitted

Some errors have detailed explanations: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.
